test/types/range/hilde/typeMathError2.chpl
writeln((1:uint(8)..100:int(8)).type:string);
